--- a/_sass/layout/_buttons.scss
+++ b/_sass/layout/_buttons.scss
@@ -17,15 +17,13 @@
   font-weight: bold;
   text-align: center;
   text-decoration: none;
-  background-color: var(--global-accent-color);
+  background-color: var(--global-base-color);
   border: 0 !important;
   border-radius: $border-radius;
   cursor: pointer;
-  transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 
   &:hover {
-    background-color: mix(#000, var(--global-accent-color), 15%);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: mix(white, #000, 20%);
   }
 
   .icon {
@@ -50,13 +48,13 @@
   /* for dark backgrounds */
 
   &--inverse {
-    color: var(--global-accent-color) !important;
-    border: 1px solid var(--global-accent-color) !important; /* override*/
+    color: var(--global-text-color-light) !important;
+    border: 1px solid var(--global-border-color) !important; /* override*/
     background-color: var(--global-bg-color);
 
     &:hover {
-      background-color: var(--global-accent-color);
       color: #fff !important;
+      border-color: var(--global-text-color-light);
     }
   }
 
